# clearly-defined

./: CHANGELOG.md  Cargo.toml  deny.toml
.github/workflows/: rust-ci.yml
examples/: cli.rs
src/: cache.rs  definitions.rs  error.rs  lib.rs
src/api/: definitions.rs
src/client/: async.rs  sync.rs
tests/: definitions.rs
