[package]
name = "cd"
description = "API interaction for clearlydefined.io"
repository = "https://github.com/EmbarkStudios/clearly-defined"
version = "0.2.0"
authors = [
    "Embark <opensource@embark-studios.com>",
    "Jake Shadle <jake.shadle@embark-studios.com>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/cd"
homepage = "https://github.com/EmbarkStudios/clearly-defined"
keywords = ["license", "spdx"]

[features]
# Adds a blocking client implementation to make API requests with, can be combined
# with either `native` or `rustls` to configure the TLS implementation used
blocking = ["client", "reqwest/blocking"]
# cache = []
client = ["reqwest"]
# Adds an async client implementation using the native TLS implementation
native = ["client", "reqwest/native-tls"]
# Adds an async client implementation using the rustls TLS implementation
rustls = ["client", "reqwest/rustls-tls"]

[dependencies]
# Error handling
anyhow = "1.0"
# Nicer byte buffers
bytes = "1.1"
# Utf-8 paths
camino = { version = "1.0", features = ["serde1"] }
# HTTP helpers
http = "0.2.0"
# Semver parsing
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Easier error definition
thiserror = "1.0"
# Url parsing
url = "2.1"

# "Built-in" HTTP request implementation
[dependencies.reqwest]
version = "0.11"
optional = true
default-features = false

[[example]]
name = "cli"
required-features = ["blocking", "rustls"]

[dev-dependencies]
ansi_term = "0.12"
